# langgraph-ecql-agent

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  SYSTEM_DESIGN.md  bash.sh  main.py  pyproject.toml  request.json
app/api/: routes.py
app/core/: __init__.py  http_clients.py  llm.py  schemas.py  settings.py
app/graph/: __init__.py  builder.py  nodes.py  state.py
app/tools/: __init__.py  ecql_validator.py  embedding_client.py  geocoder.py  layer_catalog.py  spatial_ecql_builder.py  vector_store.py  wfs.py  wfs_client.py
tests/: conftest.py  test_api_routes.py  test_ecql_validator.py  test_embedding_client.py  test_fuzzy_layer_discovery.py  test_geocoder.py  test_geocoder_context_node.py  test_geocoder_context_node_buffer.py  test_geocoder_context_node_epsg3857.py  test_graph_builder.py  test_graph_nodes.py  test_graph_validation_node.py  test_layer_catalog.py  test_layer_discovery_endpoint.py  test_llm.py  test_main_startup_catalog.py  test_semantic_layer_discovery.py  test_spatial_ecql_builder.py  test_vector_store.py  test_wfs_tools.py
