[project]
name = "geoserver-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.0",
    "litellm>=1.82.1",
    "owslib>=0.35.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pygeofilter>=0.3.3",
    "pyproj>=3.7.2",
    "pytest>=8.4.2",
    "shapely>=2.1.2",
    "uvicorn>=0.41.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "onnxruntime>=1.24.4; sys_platform == 'win32'",
]
